syntax = "proto3";

package app.improving.projections;

import "app/improving/event/domain/event_context_domain.proto";
import "app/improving/member/domain/member_context_domain.proto";
import "app/improving/order/domain/order_context_domain.proto";
import "app/improving/organization/domain/organization_context_domain.proto";
import "app/improving/product/domain/product_context_domain.proto";
import "common_domain.proto";
import "kalix/annotations.proto";

message FindOrgsByMembersForEvents {
    repeated string event_id = 1;
}

message NoEventsOnDayForOrg {
    OrganizationId org_id = 1;
}

message EventInfo {
    EventId event_id = 1;
    string event_name = 2;
}

message MemberEvents {
    MemberId attending_member = 1;
    repeated EventInfo event_infos = 2;
}

message MemberInfo {
    MemberId attending_member = 1;
    string attending_member_name = 2;
}

message OrgMembers {
    OrganizationId attending_member_org = 1;
    repeated MemberInfo member_infos = 2;
}

message OrgInfo {
    OrganizationId attending_member_org = 1;
    string attending_member_org_name = 2;
}

message OrgAndMembersAndEvents {
    repeated OrgInfo org_infos = 1;
    repeated OrgMembers org_members = 2;
    repeated MemberEvents member_events = 3;
}

message OrgsTableRow {
    OrganizationId attending_member_org_id = 1;
    string attending_member_org_name = 2;
}

message MembersTableRow {
    MemberId attending_member_id = 1;
    string attending_member_name = 2;
}

message OrgMemberCorrTableRow {
    OrganizationId attending_member_org_id = 1;
    MemberId attending_member_id = 2;
}

message EventsTableRow {
    EventId event_id = 1;
    string event_name = 2;
}

message TicketEventCorrTableRow {
    ProductId ticket_sku = 1;
    EventId event_id = 2;
}

message TicketMemberCorrTableRow {
    ProductId ticket_sku = 1;
    MemberId attending_member_id = 2;
}

service OrganizationsForMembersAttendingEvents {
    option (kalix.codegen) = {
        view: {}
    };
    rpc ProcessOrganizationEstablished(organizationcontext.OrganizationEstablished) returns (OrgsTableRow) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "organization"
        };
        option (kalix.method).view.update = {
            table: "organizations"
            transform_updates: true
        };
    }

    rpc ProcessMemberRegistered(membercontext.MemberRegistered) returns (MembersTableRow) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "member"
        };
        option (kalix.method).view.update = {
            table: "members"
            transform_updates: true
        };
    }

    rpc ProcessMemberRegisteredOrganization(membercontext.MemberRegistered) returns (OrgMemberCorrTableRow) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "member"
        };
        option (kalix.method).view.update = {
            table: "org_member_corr"
            transform_updates: true
        };
    }

    rpc ProcessEventScheduled(eventcontext.EventScheduled) returns (EventsTableRow) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "event"
        };
        option (kalix.method).view.update = {
            table: "events"
            transform_updates: true
        };
    }

    rpc ProcessEventCancelled(eventcontext.EventCancelled) returns (EventsTableRow) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "event"
        };
        option (kalix.method).view.update = {
            table: "events"
            transform_updates: true
        };
    }

    rpc ProcessProductCreatedForCorrTable(productcontext.ProductCreated) returns (TicketEventCorrTableRow) {
        option (kalix.method).view.update = {
            table: "ticket_event_corr"
            transform_updates: true
        };
    }

    rpc ProcessLineItemCreated(ordercontext.LineItemOrdered) returns (TicketMemberCorrTableRow) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "order"
        };
        option (kalix.method).view.update = {
            table: "ticket_member_corr"
            transform_updates: true
        };
    }

    rpc ProcessLineItemCancelled(ordercontext.LineItemCancelled) returns (TicketMemberCorrTableRow) {
        option (kalix.method).eventing.in = {
            event_sourced_entity: "order"
        };
        option (kalix.method).view.update = {
            table: "ticket_member_corr"
            transform_updates: true
        };
    }

    rpc ProcessFindOrgsByMembersForEvents(FindOrgsByMembersForEvents) returns (OrgAndMembersAndEvents) {
        option (kalix.method).view.query = {
            query: "SELECT "
                    "collect(organizations.*) as org_infos, collect(organizations.attending_member_org, collect(members.*)) as org_members, collect(member.attendingMember, collect(events.*) as event_infos) as member_events"
                    "FROM ticket_event_corr"
                    "JOIN ticket_member_corr ON ticket_event_corr.ticketSKU = ticket_member_corr.ticketSKU"
                    "JOIN org_member_corr ON ticket_member_corr.attendingMember = org_member_corr.attendingMember"
                    "JOIN organizations ON org_member_corr.attending_member_org = organizations.attending_member_org"
                    "JOIN members ON org_member_corr.attendingMember = members.attendingMember"
                    "WHERE ticket_event_corr.event = :eventId"
                    "GROUP_BY members.attendingMember, organizations.attending_member_org"
            transform_results: true
        };
    }
}
