syntax = "proto3";

package app.improving.projection;

import "app/improving/projection/common/common_domain.proto";
import "app/improving/projection/view/organizations_for_members_attending_events_projection.proto";
import "google/api/annotations.proto";
import "kalix/annotations.proto";

message MemberInfoEvents {
    string member_name = 1;
    repeated EventInfo event_infos = 2;
}

message OrgInfoMembers {
    string org_name = 1;
    repeated MemberInfo member_infos = 2;
}

message OrgsByMembersForEvents {
    map<string, OrgInfoMembers> org_members = 1;
    map<string, MemberInfoEvents> member_events = 2;
}

service QueryOrganizationsForMembersAttendingEvents {
    option (kalix.codegen) = {
        action: { }
    };

    rpc QueryOrganizationsForMembersAttendingEvents(FindOrgsByMembersForEvents) returns (OrgsByMembersForEvents)  {
        option (google.api.http) = {
            post: "/org-for-members-attending-events/query"
            body: "*"
        };
    }
}
